// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hide reply button 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders body only 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": null,
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": null,
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username={null}
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders disabled reply when commenting has been disabled 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                disabled={true}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": true,
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders disabled reply when story is closed 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                disabled={true}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": true,
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders in reply to 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": Object {
                      "author": Object {
                        "username": "ParentAuthor",
                      },
                    },
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": Object {
                      "author": Object {
                        "username": "ParentAuthor",
                      },
                    },
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName="ParentAuthor"
      showEditedMarker={false}
      username="Marvin"
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders username and body 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`shows conversation link 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
          <ShowConversationLink
            href="http://localhost/story?commentID=comment-id"
            id="comments-commentContainer-showConversation-comment-id"
            onClick={[Function]}
          />
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </ForwardRef(forwardRef)>
</div>
`;
